# pylearn

lecture01-pro/: pyproject.toml
lecture01-pro/hw6/: my-awesome-script.py
lecture1/: game.py  hw1.md
lecture1/code1/code1/: compare.py  ifs.py  loops.py  vars.py
lecture1/code1/code1/types/: None_type.py  bool_type.py  numeric_types.py  string_types.py
lecture2/: hw2.md
lecture2/code2/: game.py
lecture2/code2/code2/: scopes.py  tuple_vs_list.py
lecture2/code2/code2/functions/: args_kwargs.py  complex_cases.py  definition.py
lecture2/code2/code2/types/: dicts.py  lists.py  sets.py  tuples.py
lecture3/: hw3.md  hw3.py
lecture4/hw4/: contract.py
